--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-
+    <color name="white">#F5F5F5</color>
     <color name="black_overlay">#66000000</color>
+    <color name="lightgreen">#00FA9A</color>
+    <color name="LimeGreen">#3CB371</color>
 </resources>
