--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,5 +19,10 @@
     <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/black_overlay</item>
     </style>
+    <!--<style name="CustomAnimationButton" parent="@style/Widget.AppCompat.Button">-->
+    <!--<item name="colorButtonNormal">##90EE90</item>-->
+    <!--<item name="colorControlHighlight">#673ab7</item>-->
+
+<!--</style>-->
 
 </resources>
