--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:lineSpacingExtra="8sp"
         android:onClick="onClickLogin"
         android:text="Войти"
+        android:textAlignment="center"
         android:textSize="28sp"
         android:textStyle="bold"
         android:typeface="monospace"
