--- a/app/src/main/res/layout/activity_find_player.xml
+++ b/app/src/main/res/layout/activity_find_player.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/LimeGreen"
     android:visibility="visible"
+
     tools:context=".Activities.FindPlayerActivity">
 
     <ImageView
@@ -47,21 +48,26 @@
         app:layout_constraintVertical_bias="0.866" />
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="395dp"
+        android:layout_width="392dp"
+        android:id="@+id/FindPlayer"
         android:layout_height="115dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="68dp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:errorEnabled="true">
 
         <android.support.design.widget.TextInputEditText
-            android:layout_width="421dp"
-            android:layout_height="82dp"
+            android:id="@+id/nameId"
+            android:layout_width="370dp"
+            android:layout_height="78dp"
             android:hint="@string/name"
             android:inputType="text"
             android:textSize="26sp"
             android:textStyle="bold|italic"
             android:visibility="visible" />
+
     </android.support.design.widget.TextInputLayout>
 
     <TextView
