--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,27 +7,33 @@
     tools:context=".Activities.MainActivity"
     android:background="@drawable/background">
 
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="228dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/lightgreen"
+
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/krugliye_ugli"
+
+        android:fontFamily="sans-serif-light"
         android:text="Пароль:"
         android:textAlignment="center"
         android:textSize="27sp"
         android:textStyle="bold"
+        android:typeface="normal"
         app:layout_constraintBottom_toTopOf="@+id/PasswordId"
         app:layout_constraintEnd_toEndOf="@+id/PasswordId"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/PasswordId" />
+        app:layout_constraintStart_toStartOf="@+id/PasswordId"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/LoginButtonId"
         style="@android:style/Widget.Holo.Light.Button"
         android:layout_width="312dp"
         android:layout_height="110dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="140dp"
         android:fontFamily="sans-serif-condensed"
         android:lineSpacingExtra="8sp"
         android:onClick="onClickLogin"
@@ -45,8 +51,8 @@
         android:id="@+id/textView2"
         android:layout_width="228dp"
         android:layout_height="35dp"
-        android:layout_marginTop="136dp"
-        android:background="@color/lightgreen"
+        android:layout_marginTop="172dp"
+        android:background="@drawable/krugliye_ugli"
         android:text="Логин:"
         android:textAlignment="center"
         android:textSize="27sp"
@@ -55,17 +61,19 @@
         app:layout_constraintEnd_toEndOf="@+id/LoginId"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/LoginId"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/LoginId"
         android:layout_width="228dp"
         android:layout_height="35dp"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="180dp"
-        android:background="@color/lightgreen"
+        android:layout_marginTop="220dp"
+        android:background="@drawable/krugliye_ugli"
         android:ems="10"
         android:inputType="text"
+        android:radius="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -73,8 +81,9 @@
         android:id="@+id/PasswordId"
         android:layout_width="228dp"
         android:layout_height="35dp"
-        android:layout_marginTop="72dp"
-        android:background="@color/lightgreen"
+
+        android:layout_marginTop="76dp"
+        android:background="@drawable/krugliye_ugli"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="@+id/LoginId"
