--- a/app/src/main/res/drawable/krugliye_ugli.xml
+++ b/app/src/main/res/drawable/krugliye_ugli.xml
@@ -4,7 +4,7 @@
 
     <corners android:radius="15dp" />
 
-    <solid android:color="@color/lightgreen"/>
+    <solid android:color="@color/colorPrimary"/>
 
     <stroke
         android:width="1dp"
