--- a/app/src/main/res/layout/activity_find_player.xml
+++ b/app/src/main/res/layout/activity_find_player.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/LimeGreen"
+    android:background="@color/colorPrimary"
     android:visibility="visible"
 
     tools:context=".Activities.FindPlayerActivity">
@@ -39,13 +39,15 @@
         android:textSize="28sp"
         android:textStyle="bold"
         android:typeface="monospace"
+
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.866" />
+        app:layout_constraintVertical_bias="0.866"
+        tools:ignore="HardcodedText" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="392dp"
