--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-android:background="@color/LimeGreen"
-tools:context=".Activities.MenuActivity">
+android:background="@color/colorPrimary"
+    tools:context=".Activities.MenuActivity">
+<!--android:background="@drawable/back2"-->
+
 
     <ListView
         android:id="@+id/listView"
@@ -17,14 +19,5 @@ tools:context=".Activities.MenuActivity">
         android:scrollbars="horizontal"
         android:textSize="27sp"
         android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="347dp"
-        android:adjustViewBounds="false"
-        android:contentDescription="@string/do_not_move"
-        android:cropToPadding="true"
-        app:srcCompat="@drawable/dog" />
 
 </LinearLayout>
