--- a/app/src/main/res/layout/raitingelementlayout.xml
+++ b/app/src/main/res/layout/raitingelementlayout.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:layout_height="wrap_content">
+
 
     <TextView
         android:id="@+id/raiting_pos_id"
@@ -22,7 +24,7 @@
         android:id="@+id/raiting_name_id"
         android:layout_width="190dp"
         android:layout_height="28dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="12dp"
         android:fontFamily="monospace"
         android:text="TextView"
@@ -34,8 +36,8 @@
         android:id="@+id/raiting_assists_id"
         android:layout_width="56dp"
         android:layout_height="28dp"
+        android:layout_marginStart="348dp"
         android:layout_marginTop="12dp"
-        android:layout_marginStart="340dp"
 
         android:fontFamily="monospace"
         android:text="TextView"
@@ -47,9 +49,9 @@
         android:id="@+id/raiting_goals_id"
         android:layout_width="62dp"
         android:layout_height="28dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="256dp"
+        android:layout_marginStart="268dp"
 
+        android:layout_marginTop="12dp"
         android:fontFamily="monospace"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
