--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,9 +72,13 @@
         android:layout_marginTop="220dp"
         android:background="@drawable/krugliye_ugli"
         android:ems="10"
+        android:inputType="text"
         android:paddingStart="11dp"
         android:paddingEnd="11dp"
-        android:inputType="text"
+        android:selectAllOnFocus="false"
+        android:singleLine="true"
+        android:textSize="22sp"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="Autofill" />
@@ -84,15 +88,16 @@
         android:id="@+id/PasswordId"
         android:layout_width="228dp"
         android:layout_height="35dp"
-        android:paddingStart="11dp"
-        android:paddingEnd="11dp"
         android:layout_marginTop="76dp"
         android:background="@drawable/krugliye_ugli"
         android:ems="10"
         android:inputType="textPassword"
+        android:paddingStart="11dp"
+        android:paddingEnd="11dp"
+        android:textSize="22sp"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="@+id/LoginId"
         app:layout_constraintTop_toBottomOf="@+id/LoginId"
-        tools:ignore="Autofill"
-        />
+        tools:ignore="Autofill" />
 
 </android.support.constraint.ConstraintLayout>
