--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="LimeGreen">#00FA9A</color>
     <color name="GreyGreen">#2F4F4F</color>
     <color name="Gray">#778899</color>
+    <color name="SeaGreen">	#008080</color>
 </resources>
