--- a/app/src/main/res/layout/activity_find_player.xml
+++ b/app/src/main/res/layout/activity_find_player.xml
@@ -33,7 +33,7 @@
         android:layout_height="110dp"
         android:fontFamily="sans-serif-condensed"
         android:lineSpacingExtra="8sp"
-        android:onClick="FindPlayerButton"
+        android:onClick="FindPlayer"
         android:text="Найти"
         android:textAlignment="center"
         android:textSize="28sp"
