--- a/app/src/main/res/layout/raitingelementlayout.xml
+++ b/app/src/main/res/layout/raitingelementlayout.xml
@@ -11,18 +11,19 @@
         android:id="@+id/raiting_pos_id"
         android:layout_width="32dp"
         android:layout_height="28dp"
-        android:layout_marginTop="12dp"
         android:layout_marginStart="4dp"
-               android:fontFamily="monospace"
+        android:layout_marginTop="12dp"
 
+        android:fontFamily="monospace"
         android:text="TextView"
+        android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/raiting_name_id"
-        android:layout_width="190dp"
+        android:layout_width="223dp"
         android:layout_height="28dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="12dp"
@@ -34,9 +35,9 @@
 
     <TextView
         android:id="@+id/raiting_assists_id"
-        android:layout_width="56dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="348dp"
+        android:layout_width="33dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="376dp"
         android:layout_marginTop="12dp"
 
         android:fontFamily="monospace"
@@ -47,14 +48,24 @@
 
     <TextView
         android:id="@+id/raiting_goals_id"
-        android:layout_width="62dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="268dp"
+        android:layout_width="41dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="312dp"
 
-        android:layout_marginTop="12dp"
         android:fontFamily="monospace"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/raiting_games_id"
+        android:layout_width="41dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="260dp"
+
+        android:fontFamily="monospace"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
