--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="GreyGreen">#2F4F4F</color>
     <color name="Gray">#778899</color>
     <color name="SeaGreen">	#008080</color>
+    <color name="ligtGray"> #e6e6e6 </color>
 </resources>
