--- a/app/src/main/res/layout/findplayer_dialog.xml
+++ b/app/src/main/res/layout/findplayer_dialog.xml
@@ -18,7 +18,24 @@
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/playerdefault" />
+    />
+    <ImageView
+        android:id="@+id/back_icon"
+        android:layout_width="94dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="16dp"
+        android:adjustViewBounds="false"
+        android:cropToPadding="true"
+        android:onClick="BackClick"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/back_icon" />
+
 
     <TextView
         android:id="@+id/textView10"
