--- a/app/src/main/res/layout/table_element.xml
+++ b/app/src/main/res/layout/table_element.xml
@@ -25,7 +25,7 @@
         android:id="@+id/table_name_id"
         android:layout_width="158dp"
         android:layout_height="28dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="45dp"
         android:layout_marginTop="12dp"
         android:fontFamily="monospace"
         android:text="TextView"
@@ -60,9 +60,10 @@
         android:id="@+id/table_wins_id"
         android:layout_width="41dp"
         android:layout_height="31dp"
-        android:layout_marginStart="292dp"
+        android:layout_marginStart="275dp"
 
         android:fontFamily="monospace"
+        android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -72,9 +73,10 @@
 
         android:layout_width="41dp"
         android:layout_height="31dp"
-        android:layout_marginStart="204dp"
+        android:layout_marginStart="190dp"
 
         android:fontFamily="monospace"
+        android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
